@@ -56,6 +56,8 @@ Library
   loop this caused is now avoided by checking if the expected context is
   already set before trying to fix it.
 
+- Issue #20374: Fix build with GNU readline >= 6.3.
+
 - Issue #20311: select.epoll.poll() now rounds the timeout away from zero,
   instead of rounding towards zero. For example, a timeout of one microsecond
   is now rounded to one millisecond, instead of being rounded to zero.
